setup new parallax

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 				</section>
 
 			<!-- One -->
-				<section id="one" class="spotlight style1 bottom">
-					<!--<span class="image fit main"><img src="images/pj01.jpg" alt="" /></span>-->
-					<span class="image fit main"><img src="images/Home_Juvo_banner.png" alt="Juvo" /></span>
+			<section id="one" class="parallax-section">
+				<div class="spotlight style1 bottom">
+					<span class="image fit main"><img src="images/juvo-phones.png" alt="Juvo" /></span>
 					<div class="content">
 						<div class="container">
 							<div class="row">
@@ -105,11 +105,13 @@
 						</div>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
-				</section>
+				</div>
+			</section>
 
 			<!-- Two -->
-				<section id="two" class="spotlight style2 right">
-					<span class="image fit main"><img src="images/Home_AADL_banner.png" alt="" /></span>
+			<section id="two" class="parallax-section">
+				<div class="spotlight style2 right">
+					<span class="image fit main"><img src="images/AADL-banner-laptop.png" alt="Ann Arbor District Library Project" /></span>
 					<div class="content">
 						<header>
 							<h2>Ann Arbor District Library</h2>
@@ -130,11 +132,13 @@
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
+				</div>
+			</section>
 
 			<!-- Three -->
-				<section id="three" class="spotlight style3 left">
-					<span class="image fit main"><img src="images/yahoo1.svg" alt="Juvo" /></span>
+			<section id="three" class="parallax-section">
+				<div class="spotlight style3 left">
+					<span class="image fit main bottom"><img src="images/yahoo-text.svg" alt="" /></span>
 					<div class="content">
 						<header>
 							<h2>Mobile Streaming Ads</h2>
@@ -153,7 +157,8 @@
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
-				</section>
+				</div>
+			</section>
 
 			<!-- Four -->
 				<section id="four" class="wrapper style1 special fade-up">
