--- a/StreamingAds.html
+++ b/StreamingAds.html
@@ -44,7 +44,7 @@
 								<a href="#">Projects</a>
 								<ul>
 									<li><a href="Juvo.html">AthleteJuvo</a></li>
-									<li><a href="AADL.html">AADL - Ticketing System Redesign</a></li>
+									<li><a href="AADL.html">AADL Ticketing System</a></li>
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
 									<!--
 										<li>
@@ -83,19 +83,19 @@
 							<p>Native ads nowadays play a big part in our daily life and affect our purchasing decision making or marketing strategy more than we imagined. In this study, our client, Yahoo, was curious about which kind of native ad can bring them the best marketing effectiveness. We compared 3 different kinds of native ads, which were: static image ads, Non-autoplay video ads, and Autoplay video ads. Since the lab I was in was famous for it’s psychophysiological equipments, we combined the advantages from qualitative and quantitative research by using the state-of-the-art eye-tracker and retrospective think-aloud to collect high quality data.</p>
 							<div class="columns">
 								<div class="caption caption-1">
-									<div class="caption-title">column title</div>
-									<img src="images/pic03.jpg" alt="description"></img>
-									<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+									<div class="caption-title">Static image ads</div>
+									<img src="images/yahoo-ad-1.png" alt="description"></img>
+									<p></p>
 								</div>
 								<div class="caption caption-2">
-									<div class="caption-title">column title</div>
-									<img src="images/pic04.jpg" alt="description"></img>
-									<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+									<div class="caption-title">Non-autoplay video ads</div>
+									<img src="images/yahoo-ad-2.png" alt="description"></img>
+									<p></p>
 								</div>
 								<div class="caption caption-3">
-									<div class="caption-title">column title</div>
-									<img src="images/pic02.jpg" alt="description"></img>
-									<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+									<div class="caption-title">Autoplay video ads</div>
+									<img src="images/yahoo-ad-3.png" alt="description"></img>
+									<p></p>
 								</div>
 							</div>
 							<h2>Rationale</h2>
@@ -106,7 +106,7 @@
 							In the second session, participants logged in their own Facebook and YouTube accounts to browse through contents. After the trial, they watched their eye-movement videos and performed retrospective think aloud.</p>
 							<h2>Apparatus</h2>
 							<h3>Eye Tracker</h3>
-							<img class="image right" src="images/pic08.jpg" alt="description"></img>
+							<img class="image right" src="images/yahoo-tobii.png" alt="description"></img>
 							<p>An eye tracker consists of cameras, illuminators and algorithms. The illuminators create a pattern of near-infrared light on the eyes, and the cameras take images of the participant’s eyes and the patterns. The image processing algorithms then find specific details in the participant’s eyes and reflections patterns. Based on these details, algorithms calculate the eyes’ position and gaze point on a computer monitor.
 							We used Tobii Pro X2-60. The Pro X2-60 shows exactly where people are looking and, with a sampling rate of 60 Hz, is designed for research into the timing and duration of fixations. The system is perfect for both qualitative research and quantitative research, e.g. calculation of different eye tracking metrics. Participants are easily tracked while moving their head freely without a chinrest in front of the eye tracker, creating a distraction-free test environment.</p>
 							<h2>Procedure</h2>
@@ -129,6 +129,7 @@
 							</ol>
 							<h3>2.  Experiment Procedure</h3>
 							When participants arrived in the lab, they are given a copy of informed consent to read again, ask any questions, and sign if they wish to participate. After 5-point eye-tracking calibration, the first trial is to browse through Yahoo news app which embedded 3 types of stimuli. They have to tap into news page that interested them, just like they normally would. The second trial is to watch their own eye-tracking records from first experiment trial and performed retrospective think aloud. After experiment they share their attitudes and thoughts in the interview.</p>
+
 							<h2>Measurement</h2>
 							<ol>
 								<li>First Fixation Duration</li>
@@ -140,6 +141,7 @@
 								<li>Purchase Intention (Questionnaire adapted from Dodds,Monroe, and Grewal (1991); and Burns & Lutz, 2006)</li>
 								<li>Attitude towards the ad (The Online Ad Format Questionnaire was adapted from Izquierdo-Yusta, Olarte-Pascual and Reinares-Lara, 2015)</li>
 
+
 							<h2>Questionnaires</h2>
 							<h3>Purchase Intention</h3>
 							<ol>
@@ -150,9 +152,9 @@
 							<h3>Online Ad Format Questionnaire</h3>
 							<p>
 								There are 3 perceptual factor indices:<br/>
-								<span class="q-entertain">Entertainment</span>, 
-								<span class="q-annoy">Annoyance</span>, and 
-								<span class="q-info">Information</span>.
+								<font color=#F5A623>Entertainment</font>, 
+								<font color=#05A8AA>Annoyance</font>, and 
+								<font color=#BD2D87>Information</font>.
 							</p>
 							<ol>
 								<div class="q-entertain">
@@ -935,7 +937,7 @@
 
 							<h2 id="section8">Conclusion</h2>
 
-							<div class="columns columns-fixed columns-verticle">
+							<div class="columns columns-fixed columns-vertical">
 								<div class="content-box">
 									<h4>The unskippable ads are the most annoying</h4>
 									<p>Youtube's unskippable ads annoy users the most. In Yahoo news app and Facebook, users can skip ads, but because the ads could take a large portion of the screen, users still feel a little bit annoyed.</p>
