--- a/index.html
+++ b/index.html
@@ -164,25 +164,26 @@
 				<section id="four" class="wrapper style1 special fade-up">
 					<div class="container">
 						<header class="major">
-							<h2>More than a "One-Dimensional Man"</h2>
-							<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+							<h2>#NotSoFunFacts</h2>
+							<p>Fact 1: When I was tyring to think of any fun fact of mine, it turns out I have nothing fun to tell. </br>Fact 2: I'm a decent sarcasm connoisseur.</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
 								<section class="4u 6u$(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-comment"></span>
-									<h3>Sometimes I Write</h3>
-									<p>Came from a financial-challenged family, sometimes I write my flections on the structure of modern society. My favorite </p>
+									<span class="icon alt major fa-graduation-cap"></span>
+									<h3>Sometimes I Study</h3>
+									<p>I came to Michigan to pursue Human-Computer Interaction after completing my M.A. in Communication Studies. I'm fond of doing experiments and digging into data for research. My lifetime goal is using design to help people to realize their potential.</p>
 								</section>
 								<section class="4u 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-area-chart"></span>
+									
+									<span class="icon alt major fa-heart"></span>
 									<h3>Sometimes I Dance</h3>
 									<p>I'm also a street & modern dancer and an experienced choreographer. Learning how to present emotions and combine different kinds of media in my choreography helps me see things with various approaches.</p>
 								</section>
 								<section class="4u$ 6u(medium) 12u$(xsmall)">
-									<span class="icon alt major fa-flask"></span>
+									<span class="icon alt major fa-hand-spock-o"></span>
 									<h3>Sometimes I Rebel</h3>
-									<p>My favorite philosophers are Louis Pierre Althusser and Michel Foucault, if you are a fan of Culture Studies, we would totally hit it off.</p>
+									<p>Came from a financial-challenged family, sometimes I write my reflections on the structure of modern society. My favorite philosophers are Louis Pierre Althusser and Michel Foucault, if you are a fan of Culture Studies, we would totally hit it off.</p>
 								</section>
 								<!--
 								<section class="4u 6u$(medium) 12u$(xsmall)">
@@ -205,7 +206,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="yuyinshen-ux-researcher.pdf" target="_blank" class="button">View Resume</a></li>
+								<li><a href="Yu-Yin Shen.pdf" target="_blank" class="button">Alright. Alright. Let's see her resume.</a></li>
 							</ul>
 						</footer>
 					</div>
