modify yahoo project

--- a/StreamingAds.html
+++ b/StreamingAds.html
@@ -78,23 +78,23 @@
 								<p id="PI">Dr. Chen-Chao Tao</p>
 								<p id="Co-PI">Yu-Yin Shen, Daniel Wei, Wright Lin, Jenny Tseng, Alley Lin, Ting-Yu Lin</p>
 							</div>
-							<span class="image main"><img src="images/Yahoo.svg" alt="" /></span>
+							<span class="image main"><img src="images/yahoo1.svg" alt="" /></span>
 							<h2>Research Purpose</h2>
 							<p>Native ads nowadays play a big part in our daily life and affect our purchasing decision making or marketing strategy more than we imagined. In this study, our client, Yahoo, was curious about which kind of native ad can bring them the best marketing effectiveness. We compared 3 different kinds of native ads, which were: static image ads, Non-autoplay video ads, and Autoplay video ads. Since the lab I was in was famous for it’s psychophysiological equipments, we combined the advantages from qualitative and quantitative research by using the state-of-the-art eye-tracker and retrospective think-aloud to collect high quality data.</p>
 							<div class="columns">
 								<div class="caption caption-1">
 									<div class="caption-title">Static image ads</div>
-									<img src="images/yahoo-ad-1.png" alt="description"></img>
+									<img src="images/yahoo_eye1.png" alt="description"></img>
 									<p></p>
 								</div>
 								<div class="caption caption-2">
 									<div class="caption-title">Non-autoplay video ads</div>
-									<img src="images/yahoo-ad-2.png" alt="description"></img>
+									<img src="images/yahoo_eye2.png" alt="description"></img>
 									<p></p>
 								</div>
 								<div class="caption caption-3">
 									<div class="caption-title">Autoplay video ads</div>
-									<img src="images/yahoo-ad-3.png" alt="description"></img>
+									<img src="images/yahoo_eye3.png" alt="description"></img>
 									<p></p>
 								</div>
 							</div>
