--- a/StreamingAds.html
+++ b/StreamingAds.html
@@ -939,15 +939,15 @@
 
 							<div class="columns columns-fixed columns-vertical">
 								<div class="content-box">
-									<h4>The unskippable ads are the most annoying</h4>
+									<p><b>The unskippable ads are the most annoying</b></p>
 									<p>Youtube's unskippable ads annoy users the most. In Yahoo news app and Facebook, users can skip ads, but because the ads could take a large portion of the screen, users still feel a little bit annoyed.</p>
 								</div>
 								<div class="content-box">
-									<h4>Static image ads are the most informative, and the least disruptive</h4>
+									<p><b>Static image ads are the most informative, and the least disruptive</b></p>
 									<p>Static image ads are the least disruptive and the most informative among the 3 types of native-ads. Users don't have to spend time on videos, simply by looking at the images and reading the information, they can get the idea of the ad and decide to skip it or not</p>
 								</div>
 								<div class="content-box">
-									<h4>Useres liked the non-autoplay video ads the most for it combines the merits of static images and videos</h4>
+									<p><b>Useres liked the non-autoplay video ads the most for it combines the merits of static images and videos</b></p>
 									<p>The non-autoplay video ads combines the advantages of the autoplay videos ads and the static image ads. If users are interested in the ads, they can decide whether to watch the videos to get more information.</p>
 								</div>
 							</div>
