home self-intro and resume

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>#NotSoFunFacts</h2>
-							<p>Fact 1: When I was tyring to think of any fun fact of mine, it turns out I have nothing fun to tell. </br>Fact 2: I'm a decent sarcasm connoisseur.</p>
+							<p>Fact 1: My top 5 strengths from the CliftonStrengths Assessment are <b>restorative</b>, <b>input</b>, <b>intellection</b>, <b>learner</b>, and <b>relator</b>.</br>Fact 2: I'm a decent sarcasm connoisseur.</p>
 						</header>
 						<div class="box alt">
 							<div class="row uniform">
