--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
 								</ul>
 							</li>
-							<li><a href="Yu-Yin Shen.pdf" target="_blank" class="button special">Download Resume</a></li>
+							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -206,7 +206,7 @@
 						</div>
 						<footer class="major">
 							<ul class="actions">
-								<li><a href="Yu-Yin Shen.pdf" target="_blank" class="button">Alright. Alright. Let's see her resume.</a></li>
+								<li><a href="YuYinShen_resume.pdf" target="_blank" class="button">Alright. Alright. Let's see her resume.</a></li>
 							</ul>
 						</footer>
 					</div>
