--- a/StreamingAds.html
+++ b/StreamingAds.html
@@ -60,7 +60,7 @@
 								</ul>
 							</li>
 							<!--<li><a href="elements.html">Elements</a></li>-->
-							<li><a href="Yu-Yin Shen.pdf" target="_blank" class="button special">Download Resume</a></li>
+							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
