--- a/StreamingAds.html
+++ b/StreamingAds.html
@@ -34,32 +34,22 @@
 						<a href="index.html">
 							<span class="symbol"><img src="images/logo.svg" alt="logo" /></span>
 							<span>Yu-Yin Shen</span>
-							<span class="subtitle">UX Designer</span>
+							<span class="subtitle">UX Specialist</span>
 						</a>
 					</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<!--<li><a href="index.html">Home</a></li>-->
 							<li>
 								<a href="#">Projects</a>
 								<ul>
 									<li><a href="Juvo.html">AthleteJuvo</a></li>
-									<li><a href="AADL.html">AADL Ticketing System</a></li>
+									<li><a href="AADL.html">AADL - Ticketing System Redesign</a></li>
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
-									<!--
-										<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option 1</a></li>
-											<li><a href="#">Option 2</a></li>
-											<li><a href="#">Option 3</a></li>
-											<li><a href="#">Option 4</a></li>
-										</ul>
-									-->
-									</li>
+									<li><a href="Shopping.html">UX Testing for Shopping Apps</a></li>
+									<li><a href="OutPerform.html">OutPerform</a></li>
 								</ul>
 							</li>
-							<!--<li><a href="elements.html">Elements</a></li>-->
 							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
 						</ul>
 					</nav>
