--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<a href="index.html">
 							<span class="symbol"><img src="images/logo.svg" alt="logo" /></span>
 							<span>Yu-Yin Shen</span>
-							<span class="subtitle">UX Designer</span>
+							<span class="subtitle">UX Specialist</span>
 						</a>
 					</h1>
 					<nav id="nav">
@@ -45,6 +45,8 @@
 									<li><a href="Juvo.html">AthleteJuvo</a></li>
 									<li><a href="AADL.html">AADL - Ticketing System Redesign</a></li>
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
+									<li><a href="Shopping.html">UX Testing for Shopping Apps</a></li>
+									<li><a href="OutPerform.html">OutPerform</a></li>
 								</ul>
 							</li>
 							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
