--- a/StreamingAds.html
+++ b/StreamingAds.html
@@ -9,8 +9,11 @@
 		<title>Mobile Streaming Advertisements | Yu-Yin Shen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/shared.css" />
 		<link rel="stylesheet" href="assets/css/projects.css" />
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/projects-ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/projects-ie8.css" /><![endif]-->
 
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -962,6 +965,7 @@
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
