--- a/AADL.html
+++ b/AADL.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AADL - Ticketing System Redesign | Yu-Yin Shen</title>
+		<title>AADL | Yu-Yin Shen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -48,6 +48,8 @@
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
 									<li><a href="Shopping.html">UX Testing for Shopping Apps</a></li>
 									<li><a href="OutPerform.html">OutPerform</a></li>
+									<li><a href="Lonely.html">Lonely No More</a></li>
+									<li><a href="CW.html">CommonWealth</a></li>
 								</ul>
 							</li>
 							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
