--- a/Juvo.html
+++ b/Juvo.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>AthleteJuvo: Gamification for Athlete Rehabilitation Exercises | Yu-Yin Shen</title>
+		<title>AthleteJuvo | Yu-Yin Shen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -48,13 +48,15 @@
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
 									<li><a href="Shopping.html">UX Testing for Shopping Apps</a></li>
 									<li><a href="OutPerform.html">OutPerform</a></li>
+									<li><a href="Lonely.html">Lonely No More</a></li>
+									<li><a href="CW.html">CommonWealth</a></li>
 								</ul>
 							</li>
 							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
-
+				
 				<!-- Main -->
 					<div id="main">
 						<div class="project-nav-icon icon fa-hand-o-down"></div>
@@ -78,7 +80,7 @@
 									<p><b>Team Size</b> </br>4 people</p>
 								</div>
 								<div class="caption caption-2">
-									<p><b>Tools</b></br>Pencil & Paper</br>Sketch</br>InVision</br>SurveyCake</p>
+									<p><b>Tools</b></br>Pencil & Paper</br>Sketch</br>InVision</br>Survey</p>
 									<p><b>Skills</b></br>Analytical research</br>Sketching techniques</br>Wireframing and prototyping</br>UX testing</p>
 								</div>
 							</div>
