--- a/OutPerform.html
+++ b/OutPerform.html
@@ -48,13 +48,14 @@
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
 									<li><a href="Shopping.html">UX Testing for Shopping Apps</a></li>
 									<li><a href="OutPerform.html">OutPerform</a></li>
+									<li><a href="Lonely.html">Lonely No More</a></li>
+									<li><a href="CW.html">CommonWealth</a></li>
 								</ul>
 							</li>
 							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
 						</ul>
 					</nav>
 				</header>
-
 				<!-- Main -->
 					<div id="main">
 						<div class="project-nav-icon icon fa-hand-o-down"></div>
@@ -67,17 +68,17 @@
 							<div class="credits">
 								
 							</div>
-							<span class="image main"><img src="images/AADL_banner.png" alt="" /></span>
+							<span class="image main"><img src="images/Out_banner.png" alt="" /></span>
 							<h2>Project Introduction</h2>
 							<p>To solve the gap of the demand and supply of used outdoor gears and personal trainers, I present “Outperform”, an app that users can search nearby equipment sharers and personal trainers based on their location. To encourage people being involved in more outdoor activities and take care of their well-being, this app helps bridge the two communities of the outdoor beginners and the outdoor experts.</p>
 							
 							<div class="columns project-intro">
 								<div class="caption caption-1">
-									<p><b>My Role</b></br>UX Designer</br>Visual Designer</p>
-									<p><b>Tools</b></br>Pencil & Paper</br>SurveyCake</br>Sketch</br>InVision</p>	
+									<p><b>My Role</b></br>UX designer</br>Visual designer</p>
+									<p><b>Tools</b></br>Pencil & paper</br>Survey</br>Sketch</br>InVision</p>	
 								</div>
 								<div class="caption caption-2">
-									<p><b>Team Size</b></br>Personal Project</p>
+									<p><b>Team Size</b></br>Personal project</p>
 									<p><b>Timeframe</b></br>Sept. 2017 – Dec. 2017</p>
 									<p><b>Skills</b></br>Analytical research</br>Sketching techniques</br>Scenarios and storyboarding</br>Wireframing and prototyping</p>
 								</div>
@@ -183,7 +184,7 @@
 							<p>My final design decision is that we should empower our users rather than restrict their behaviors. Users have to verify their skills by certifications on the current applications or websites in the market, but I decided to let users self-report their skill level and their equipment condition. However, to ensure the app provide trustable information, the skill level or the product condition that is shown on the user profile would average reviews from other users and the self-report level.</p>
 
 							<h2>High-Fi Prototype</h2>
-							<iframe width="438" height="930" src="//invis.io/9GEW3JTKY" frameborder="0" allowfullscreen></iframe>
+							<span class="image main"><img src="images/Out_all.png" alt="" /></span>
 
 							<h2>Reflection</h2>
 							<p>My design philosophy is “design for equity”. In our society, we have a lot of people with low-income who may not have the money to maintain their well-being, not to mention doing outdoor activities that require knowledge and expensive equipment. The possible social impacts of the design are that the equipment renting business may lose customers if people start to share their own equipment; but on the bright side, the design also encourages people to connect both online and offline, and cultivate the habit of participating in outdoor activities.</p>
