--- a/Shopping.html
+++ b/Shopping.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Usability Testing for Shopping Apps | Yu-Yin Shen</title>
+		<title>UX Testing for Shopping Apps | Yu-Yin Shen</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="/assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -48,6 +48,8 @@
 									<li><a href="StreamingAds.html">Mobile Streaming Ads</a></li>
 									<li><a href="Shopping.html">UX Testing for Shopping Apps</a></li>
 									<li><a href="OutPerform.html">OutPerform</a></li>
+									<li><a href="Lonely.html">Lonely No More</a></li>
+									<li><a href="CW.html">CommonWealth</a></li>
 								</ul>
 							</li>
 							<li><a href="YuYinShen_resume.pdf" target="_blank" class="button special">Download Resume</a></li>
@@ -78,8 +80,8 @@
 									<p><b>Team Size</b> </br>3 people</p>
 								</div>
 								<div class="caption caption-2">
-									<p><b>Tools</b></br>Tobii Pro Eye-tracker X2-60</br>SurveyMonkey</p>
-									<p><b>Skills</b></br>Experiment Design</br>Interview</br>Quantitative & Qualitative data analysis</br>Usability testing</p>
+									<p><b>Tools</b></br>Tobii Pro Eye-tracker X2-60</br>Survey</p>
+									<p><b>Skills</b></br>Experiment design</br>Interview</br>Quantitative & qualitative data analysis</br>Usability testing</p>
 								</div>
 							</div>
 
